# ScoutingApp

./: .gitignore  LICENSE.md  README.md  bs.bat  default-config.json  pubspec.yaml
.github/: pull_request_template.md
Admin App/: deeznuts.html
Admin App/.config/configstore/: update-notifier-npm.json
MasterApp-Code/: index.html
Scouter mobile app/: LICENSE.md
Scouter mobile app/ios/Runner/: Info.plist
Scouter mobile app/test/: widget_test.dart
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  oldMain.dart  server.dart
lib/common/: form.dart  models.dart  utils.dart
lib/components/common/: form.dart  models.dart  sync_client.dart
lib/components/server/: api.dart  api.yaml  config.dart  mongo.dart  tba.dart
lib/screens/: homePage.dart  scoutingPage.dart  syncPage.dart  welcomePage.dart
lib/server/: api.dart  api.yaml  models.dart  mongo.dart  tba.dart
lib/widgets/: splashScreen.dart
scouting-app/frontend/: README.md  pubspec.yaml
scouting-app/frontend/android/: local.properties
scouting-app/frontend/test/: widget_test.dart
scouting-master/server/: .gitignore  package.json  rollup.config.js
scouting_app/: README.md  pubspec.yaml
scouting_app/android/: local.properties
scouting_app/lib/: main.dart
scouting_app/test/: widget_test.dart
scoutingapp/: README.md
scoutingapp/lib/: main.dart
server-interface/: index.html  style.css
server/interface/: index.html
server/src/: App.svelte  Card.svelte  commands.ts
server/src-tauri/: Cargo.toml
test/: widget_test.dart
(+27 files in other folders)
